Bien, toan tu, kieu du lieu JS

--- a/Bien_kieudulieu_toantu_JS/nhapdiemsinhvien.html
+++ b/Bien_kieudulieu_toantu_JS/nhapdiemsinhvien.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<script src="new_project.js"></script>
+<script src="nhapdiemsinhvien.js"></script>
 
 </body>
 </html>
